--- a/assetss/index.css
+++ b/assetss/index.css
@@ -156,24 +156,66 @@ nav {
     box-shadow: 7px 7px 10px var(--colorTitle);
 
 }
-.aboutContainer .subTitle{
+
+.aboutContainer .subTitle {
     width: 100%;
     text-align: center;
-    margin: 20px 0;
+    margin: 30px 0;
+
+}
+
+.aboutContainer .aboutParagraph {
+    width: 100%;
+    text-align: justify;
+    margin-bottom: 50px;
 }
 
 .about {
     display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: auto  ;
+    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+    gap: 1em;
+    overflow: hidden;
 }
 
 .aboutArticle {
     text-align: center;
+    margin: 0 20px;
+    padding: 0 10px;
 }
 
-.aboutImg {}
+.aboutImg {
+    width: 50px;
+    margin: 0 0 0 20px;
+}
 
-.aboutTitle {}
+.aboutTitle {
+    text-align: center;
+    width: 100%;
+    margin: 10px 0;
+}
 
 .aboutParagraph {}
+
+.productsContainer {
+    background-color: #000000;
+    opacity: 0.4;
+    background-image: repeating-radial-gradient(circle at 0 0, transparent 0, #000000 4px), repeating-linear-gradient(#1f3d5855, #1f3d58);
+    padding: 50px;
+    margin: 0 0 50px 0;
+    width: 100%;
+
+}
+
+.products {
+    background-color: #1f3d58;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+    
+}
+.product {
+    text-align: center;
+}
+
+.products figure img {
+    width: 70%;
+}
